# Cloudy_Bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.txt  config.py  example.env  main.py  pyproject.toml  requirements.txt
bot/: config.py  main.py  sheduler.py
bot/database/: db.py
bot/handlers/: get_weather_handler.py  notification_handler.py  start_handler.py
bot/keyboards/: time_kb.py  weather_kb.py
bot/utils/: weather.py
database/: db.py
handlers/: GetWeather.py  get_geo_weather.py  notification_handler.py  time_handler.py
infra/: Dockerfile  config.example.toml  config.toml  docker-compose.yaml  init.sql
keyboards/: time_kb.py
