[project]
name = "cloudy-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "alembic>=1.15.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
]
